<resources>
    <string name="package_name">"kevinma_COMP304Lab2_Ex1"</string>
    <string name="app_name">"Kevin's Klean Kanteen"</string>
    <string name="extras_key_chkout">"CHECKOUT_ITEMS"</string>
    <string name="extras_key_foodmenu">"FOOD_MENU"</string>
    <string name="checkout_bag_current_state_display">"Food Items In Checkout Bag:\n\n</string>
    <string name="logo_content_description">"Company Logo for Kevin's Klean Kanteen"</string>
    <string name="enter_btn_text">"Enter"</string>
    <string name="enter_btn_clicked_text">"Welcome to Kevin's Klean Kanteen!"</string>
    <string name="cnfrm_dialog_title">"Are you sure you want to do this?"</string>
    <string name="cnfrm_dialog_message">"Returning to the food types menu will discard all the current items saved in your checkout bag."</string>
    <string name="rtn_home_msg">"Returning to Home Screen"</string>
    <string name="rtn_food_types_msg">"Returning to the food types menu"</string>
    <string name="cancel_action_msg">"Cancelled Action"</string>
    <string name="pos_actn_lbl">"OK"</string>
    <string name="neg_actn_lbl">"No, Nevermind then"</string>
    <string name="food_types_activity_label">"Kevin's Klean Kanteen: Menu"</string>
    <string name="food_types_heading">"Triple K's Deluxe Menu"</string>
    <string name="food_types_instructions">"Please select one of the following food types by choosing from the options menu in the top right hand corner:"</string>
    <string name="food_types_veg">"- Vegetables and legumes/beans"</string>
    <string name="food_types_fruits">"- Fruits"</string>
    <string name="food_types_grains">"- Grain (cereal) foods"</string>
    <string name="food_types_protein">"- Meat and protein"</string>
    <string name="food_types_dairy">"- Dairy"</string>
    <string name="menu_veg">"Vegetables and legumes/beans"</string>
    <string name="menu_fruits">"Fruits"</string>
    <string name="menu_grains">"Grain (cereal) foods"</string>
    <string name="menu_protein">"Meat and protein"</string>
    <string name="menu_dairy">"Dairy"</string>
    <string name="menu_veg_selected">"Browsing Vegetables and legumes/beans items!</string>
    <string name="menu_fruits_selected">"Browsing Fruits items!</string>
    <string name="menu_grain_selected">"Browsing Grain (cereal) food items!</string>
    <string name="menu_protein_selected">"Browsing Meat and protein items!</string>
    <string name="menu_dairy_selected">"Browsing Dairy items!</string>
    <string name="veg_food_items_activity_label">"Kevin's Klean Kanteen: Vegetables"</string>
    <string name="veg_food_items_instructions">"Shown below are our selection of vegetables offered at Kevin's Klean Kantene. Please select your items and press the button below to proceed to checkout.Alternatively, you can select another food type from the menu in the top right hand corner.\n\nPlease note that you can only order one serving of each menu item. We use only the rarest and finest ingredients in the food we serve to our customers :)! Also don't worry about the price of the food items. You only live once. You need to make decisions which benefit your life in the long run. Do not be tied down by dirty money of the mortal realm."</string>
    <string-array name="vegetables">
        <item>Spinach</item>
        <item>Carrots</item>
        <item>Broccoli</item>
        <item>Brussels Sprouts</item>
        <item>Chickpeas</item>
        <item>Lentils</item>
        <item>Kidney Beans</item>
    </string-array>
    <string-array name="vegetables_prices">
        <item>1.05</item>
        <item>0.85</item>
        <item>0.99</item>
        <item>5.42</item>
        <item>0.75</item>
        <item>1.50</item>
        <item>1.25</item>
    </string-array>
    <string name="fruits_food_items_activity_label">"Kevin's Klean Kanteen: Fruits"</string>
    <string name="fruits_food_items_instructions">"Shown below are our selection of fruits offered at Kevin's Klean Kantene. Please select your items and press the button below to proceed to checkout.Alternatively, you can select another food type from the menu in the top right hand corner.\n\nPlease note that you can only order one serving of each menu item. We use only the rarest and finest ingredients in the food we serve to our customers :)! Also don't worry about the price of the food items. You only live once. You need to make decisions which benefit your life in the long run. Do not be tied down by dirty money of the mortal realm."</string>
    <string-array name="fruits">
        <item>Grapefruit</item>
        <item>Pineapple</item>
        <item>Avocado</item>
        <item>Blueberries</item>
        <item>Apples</item>
        <item>Strawberries</item>
        <item>Bananas</item>
    </string-array>
    <string-array name="fruits_prices">
        <item>0.95</item>
        <item>2.25</item>
        <item>1.15</item>
        <item>1.00</item>
        <item>0.50</item>
        <item>3.25</item>
        <item>1.65</item>
    </string-array>
    <string name="grains_food_items_activity_label">"Kevin's Klean Kanteen: Grains"</string>
    <string name="grains_food_items_instructions">"Shown below are our selection of grains offered at Kevin's Klean Kantene. Please select your items and press the button below to proceed to checkout.Alternatively, you can select another food type from the menu in the top right hand corner.\n\nPlease note that you can only order one serving of each menu item. We use only the rarest and finest ingredients in the food we serve to our customers :)! Also don't worry about the price of the food items. You only live once. You need to make decisions which benefit your life in the long run. Do not be tied down by dirty money of the mortal realm."</string>
    <string-array name="grains">
        <item>Whole Oats</item>
        <item>Whole Wheat</item>
        <item>Corn</item>
        <item>Buckwheat</item>
        <item>Quinoa</item>
        <item>Millet</item>
        <item>Brown Rice</item>
    </string-array>
    <string-array name="grains_prices">
        <item>1.25</item>
        <item>2.50</item>
        <item>3.25</item>
        <item>3.50</item>
        <item>2.75</item>
        <item>2.25</item>
        <item>2.00</item>
    </string-array>
    <string name="protein_food_items_activity_label">"Kevin's Klean Kanteen: Protein"</string>
    <string name="proteins_food_items_instructions">"Shown below are our selection of protein food items offered at Kevin's Klean Kantene. Please select your items and press the button below to proceed to checkout.Alternatively, you can select another food type from the menu in the top right hand corner.\n\nPlease note that you can only order one serving of each menu item. We use only the rarest and finest ingredients in the food we serve to our customers :)! Also don't worry about the price of the food items. You only live once. You need to make decisions which benefit your life in the long run. Do not be tied down by dirty money of the mortal realm."</string>
    <string-array name="protein">
        <item>Salmon</item>
        <item>Chicken Breast</item>
        <item>Pork Tenderloin</item>
        <item>Lean Beef</item>
        <item>Tofu</item>
        <item>Edamame</item>
        <item>Black Beans</item>
    </string-array>
    <string-array name="protein_prices">
        <item>7.50</item>
        <item>6.50</item>
        <item>7.00</item>
        <item>7.25</item>
        <item>5.50</item>
        <item>5.25</item>
        <item>4.15</item>
    </string-array>
    <string name="dairy_food_items_activity_label">"Kevin's Klean Kanteen: Dairy"</string>
    <string name="dairy_food_items_instructions">"Shown below are our selection of dairy food items offered at Kevin's Klean Kantene. Please select your items and press the button below to proceed to checkout.Alternatively, you can select another food type from the menu in the top right hand corner.\n\nPlease note that you can only order one serving of each menu item. We use only the rarest and finest ingredients in the food we serve to our customers :)! Also don't worry about the price of the food items. You only live once. You need to make decisions which benefit your life in the long run. Do not be tied down by dirty money of the mortal realm."</string>
    <string-array name="dairy">
        <item>Skim Milk</item>
        <item>Greek Yogurt</item>
        <item>Cottage Cheese</item>
        <item>Low Fat Cream Cheese</item>
        <item>Coconut Milk</item>
        <item>Almond Milk</item>
        <item>Ice Cream</item>
    </string-array>
    <string-array name="dairy_prices">
        <item>1.86</item>
        <item>2.05</item>
        <item>3.15</item>
        <item>1.69</item>
        <item>2.32</item>
        <item>2.10</item>
        <item>0.20</item>
    </string-array>
    <string-array name="food_types">
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Grains</item>
        <item>Protein</item>
        <item>Dairy</item>
    </string-array>
    <string name="food_items_checkout_button_text">"Proceed to checkout"</string>
    <string name="food_items_checkbox_selected">" has been added to checkout bag."</string>
    <string name="food_items_checkbox_deselected">" has been removed from checkout bag."</string>
    <string name="checkout_activity_request_code">1</string>
    <string name="checkout_activity_label">"Kevin's Klean Kanteen: Checkout"</string>
    <string name="checkout_activity_checkout_bag_header">"Your currently selected food items:\n\n"</string>
    <string name="checkout_activity_instructions">"Please select your method of payment and press the Checkout button below:"</string>
    <string name="checkout_option_cash">Cash</string>
    <string name="checkout_option_credit_card">Credit Card</string>
    <string name="checkout_option_debit_card">Debit Card</string>
    <string name="checkout_button_text">"Checkout"</string>
    <string name="payInfo_activity_request_code">2</string>
    <string name="payment_activity_label">"Kevin's Klean Kanteen: Customer Information"</string>
    <string name="payment_fullname_label">Full Name:</string>
    <string name="payment_ccardnumber_label">Credit Card Number:</string>
    <string name="payment_dcardnumber_label">Debit Card Number:</string>
    <string name="payment_cvvnumber_label">CVV Number:</string>
    <string name="payment_instructions_label">Dear customer, please provide your following details to confirm payment:</string>
    <string name="payment_feedback_label">Out of curiosity, we would love to get some feedback from our customers:</string>
    <string name="payment_favfoodtype_label">What is your favorite food type on our menu?</string>
    <string name="payment_favfooditem_label">What is your favorite food item on our menu?</string>
    <string name="payment_satisfactionlvl_label">How satisfied are you with our service?</string>
    <string name="payment_total_extra_key">PAYMENT_TOTAL</string>
    <string name="payment_option_extra_key">PAYMENT_OPTION</string>
    <string name="payment_debit_card_extra_val">DEBIT_CARD</string>
    <string name="payment_credit_card_extra_val">CREDIT_CARD</string>
    <string name="payment_cash_extra_val">CASH</string>
    <string name="payment_info_fullname_extra_key">PAYEE_FULL_NAME</string>
    <string name="payment_info_cardnum_extra_key">CARD_NUMBER</string>
    <string name="payment_info_cvvnum_extra_key">CVV_NUMBER</string>
    <string name="payment_info_favfoodtype_extra_key">FAV_FOOD_TYPE</string>
    <string name="final_order_heading">Order Information</string>
    <string name="final_payment_heading">Payment Information</string>
    <string name="final_total_payment">TOTAL: $</string>
    <string name="final_payment_type">Payment Type:</string>
    <string name="final_close_btn">Close Application</string>
</resources>