<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalOrderInfoActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_order_heading"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/finalOrderDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/finalTotalPaymentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_total_payment"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_payment_heading"
                android:layout_marginTop="32dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/finalPaymentTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_payment_type"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/finalExtraPayDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="26dp" />

            <Button
                android:id="@+id/finalCloseBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_close_btn" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>